<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/colorDialogGridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    android:useDefaultMargins="true">

    <TextView
        android:id="@+id/tvAlfa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="0"
        android:text="@string/etiqueta_alfa" />

    <SeekBar
        android:id="@+id/sbAlfa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:max="255" />

    <TextView
        android:id="@+id/tvRojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="1"
        android:text="@string/etiqueta_rojo" />

    <SeekBar
        android:id="@+id/sbRojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:max="255" />

    <TextView
        android:id="@+id/tvVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="2"
        android:text="@string/etiqueta_verde" />

    <SeekBar
        android:id="@+id/sbVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:max="255" />

    <TextView
        android:id="@+id/tvAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="3"
        android:text="@string/etiqueta_azul" />

    <SeekBar
        android:id="@+id/sbAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:max="255" />

    <View
        android:id="@+id/colorView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/color_view_height"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal" />

</GridLayout>